// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`\`@example\` tests > ASCII_LETTERS() 1`] = `
"
┌───┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐
│   │ A   │ B   │ C   │ D   │ E   │ F   │ G   │ H   │ I   │ J   │ K   │ L   │ M   │ N   │ O   │ P   │ Q   │ R   │ S   │ T   │ U   │ V   │ W   │ X   │ Y   │ Z   │ [   │ \\   │ ]   │ ^   │ _   │ \`   │ a   │ b   │ c   │ d   │ e   │ f   │ g   │ h   │ i   │ j   │ k   │ l   │ m   │ n   │ o   │ p   │ q   │ r   │ s   │ t   │
├───┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤
│ 1 │ "a" │ "b" │ "c" │ "d" │ "e" │ "f" │ "g" │ "h" │ "i" │ "j" │ "k" │ "l" │ "m" │ "n" │ "o" │ "p" │ "q" │ "r" │ "s" │ "t" │ "u" │ "v" │ "w" │ "x" │ "y" │ "z" │ "A" │ "B" │ "C" │ "D" │ "E" │ "F" │ "G" │ "H" │ "I" │ "J" │ "K" │ "L" │ "M" │ "N" │ "O" │ "P" │ "Q" │ "R" │ "S" │ "T" │ "U" │ "V" │ "W" │ "X" │ "Y" │ "Z" │
└───┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘
"
`;

exports[`\`@example\` tests > ASCII_LETTERS_LOWERCASE() 1`] = `
"
┌───┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐
│   │ A   │ B   │ C   │ D   │ E   │ F   │ G   │ H   │ I   │ J   │ K   │ L   │ M   │ N   │ O   │ P   │ Q   │ R   │ S   │ T   │ U   │ V   │ W   │ X   │ Y   │ Z   │
├───┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤
│ 1 │ "a" │ "b" │ "c" │ "d" │ "e" │ "f" │ "g" │ "h" │ "i" │ "j" │ "k" │ "l" │ "m" │ "n" │ "o" │ "p" │ "q" │ "r" │ "s" │ "t" │ "u" │ "v" │ "w" │ "x" │ "y" │ "z" │
└───┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘
"
`;

exports[`\`@example\` tests > ASCII_LETTERS_UPPERCASE() 1`] = `
"
┌───┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐
│   │ A   │ B   │ C   │ D   │ E   │ F   │ G   │ H   │ I   │ J   │ K   │ L   │ M   │ N   │ O   │ P   │ Q   │ R   │ S   │ T   │ U   │ V   │ W   │ X   │ Y   │ Z   │
├───┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤
│ 1 │ "A" │ "B" │ "C" │ "D" │ "E" │ "F" │ "G" │ "H" │ "I" │ "J" │ "K" │ "L" │ "M" │ "N" │ "O" │ "P" │ "Q" │ "R" │ "S" │ "T" │ "U" │ "V" │ "W" │ "X" │ "Y" │ "Z" │
└───┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘
"
`;

exports[`\`@example\` tests > DIGITS() 1`] = `
"
┌───┬───┬───┬───┬───┬───┬───┬───┬───┬───┬───┐
│   │ A │ B │ C │ D │ E │ F │ G │ H │ I │ J │
├───┼───┼───┼───┼───┼───┼───┼───┼───┼───┼───┤
│ 1 │ 0 │ 1 │ 2 │ 3 │ 4 │ 5 │ 6 │ 7 │ 8 │ 9 │
└───┴───┴───┴───┴───┴───┴───┴───┴───┴───┴───┘
"
`;

exports[`\`@example\` tests > HEX_DIGITS() 1`] = `
"
┌───┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐
│   │ A   │ B   │ C   │ D   │ E   │ F   │ G   │ H   │ I   │ J   │ K   │ L   │ M   │ N   │ O   │ P   │ Q   │ R   │ S   │ T   │ U   │ V   │
├───┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤
│ 1 │ "0" │ "1" │ "2" │ "3" │ "4" │ "5" │ "6" │ "7" │ "8" │ "9" │ "a" │ "b" │ "c" │ "d" │ "e" │ "f" │ "A" │ "B" │ "C" │ "D" │ "E" │ "F" │
└───┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘
"
`;

exports[`\`@example\` tests > MATRIX(4, 5, 3) 1`] = `
"
┌───┬───┬───┬───┬───┬───┐
│   │ A │ B │ C │ D │ E │
├───┼───┼───┼───┼───┼───┤
│ 1 │ 3 │ 3 │ 3 │ 3 │ 3 │
├───┼───┼───┼───┼───┼───┤
│ 2 │ 3 │ 3 │ 3 │ 3 │ 3 │
├───┼───┼───┼───┼───┼───┤
│ 3 │ 3 │ 3 │ 3 │ 3 │ 3 │
├───┼───┼───┼───┼───┼───┤
│ 4 │ 3 │ 3 │ 3 │ 3 │ 3 │
└───┴───┴───┴───┴───┴───┘
"
`;

exports[`\`@example\` tests > OCT_DIGITS() 1`] = `
"
┌───┬───┬───┬───┬───┬───┬───┬───┬───┐
│   │ A │ B │ C │ D │ E │ F │ G │ H │
├───┼───┼───┼───┼───┼───┼───┼───┼───┤
│ 1 │ 0 │ 1 │ 2 │ 3 │ 4 │ 5 │ 6 │ 7 │
└───┴───┴───┴───┴───┴───┴───┴───┴───┘
"
`;

exports[`\`@example\` tests > RANGE > RANGE(3, 7) 1`] = `
"
┌───┬───┬───┬───┬───┐
│   │ A │ B │ C │ D │
├───┼───┼───┼───┼───┤
│ 1 │ 3 │ 4 │ 5 │ 6 │
└───┴───┴───┴───┴───┘
"
`;

exports[`\`@example\` tests > RANGE > RANGE(10) 1`] = `
"
┌───┬───┬───┬───┬───┬───┬───┬───┬───┬───┬───┐
│   │ A │ B │ C │ D │ E │ F │ G │ H │ I │ J │
├───┼───┼───┼───┼───┼───┼───┼───┼───┼───┼───┤
│ 1 │ 0 │ 1 │ 2 │ 3 │ 4 │ 5 │ 6 │ 7 │ 8 │ 9 │
└───┴───┴───┴───┴───┴───┴───┴───┴───┴───┴───┘
"
`;

exports[`\`@example\` tests > TRANSPOSE(DIGITS()) 1`] = `
"
┌────┬───┐
│    │ A │
├────┼───┤
│ 1  │ 0 │
├────┼───┤
│ 2  │ 1 │
├────┼───┤
│ 3  │ 2 │
├────┼───┤
│ 4  │ 3 │
├────┼───┤
│ 5  │ 4 │
├────┼───┤
│ 6  │ 5 │
├────┼───┤
│ 7  │ 6 │
├────┼───┤
│ 8  │ 7 │
├────┼───┤
│ 9  │ 8 │
├────┼───┤
│ 10 │ 9 │
└────┴───┘
"
`;
